@@ -15,7 +15,7 @@ extern "C"
 #define HAVE64
 #endif
 
-#if !defined(AJ_LinuxLF) && !defined(AJ_SolarisLF) && !defined(AJ_IRIXLF)
+#if !defined(AJ_LinuxLF) && !defined(AJ_SolarisLF) && !defined(AJ_IRIXLF) && !defined(AJ_AIX64) && !defined(AJ_HPUX64)
 typedef int ajint;
 typedef long ajlong;
 typedef unsigned int ajuint;
@@ -33,8 +33,8 @@ typedef unsigned int ajuint;
 typedef short ajshort;
 typedef unsigned short ajushort;
 typedef unsigned long long ajulong;
-#define ftell(a) ftello64(a)
-#define fseek(a,b,c) fseeko64(a,b,c)
+#define ftell(a) ftello(a)
+#define fseek(a,b,c) fseeko(a,b,c)
 #endif
 
 
@@ -50,6 +50,19 @@ typedef unsigned long long ajulong;
 #define fseek(a,b,c) fseeko(a,b,c)
 #endif
 
+#ifdef AJ_HPUXLF
+#define HAVE64
+typedef int ajint;
+typedef long long ajlong;
+typedef unsigned int ajuint;
+typedef short ajshort;
+typedef unsigned short ajushort;
+typedef unsigned long long ajulong;
+#define ftell(a) ftello(a)
+#define fseek(a,b,c) fseeko(a,b,c)
+#define fopen(a,b) fopen64(a,b)
+#endif
+
 #ifdef AJ_IRIXLF
 #define HAVE64
 typedef int ajint;
@@ -62,7 +75,18 @@ typedef unsigned long ajulong;
 #define fseek(a,b,c) fseek64(a,b,c)
 #endif
 
+#ifdef AJ_AIXLF
+#define HAVE64
+#define ftell(a) ftello(a)
+#define fseek(a,b,c) fseeko(a,b,c)
 
+typedef int ajint;
+typedef long long ajlong;
+typedef unsigned int ajuint;
+typedef short ajshort;
+typedef unsigned short ajushort;
+typedef unsigned long long ajulong;
+#endif
 
 #endif
 
